# cpp_blockworld

./: .envrc  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  mise.toml
client/src/: Application.cpp  Application.h  constants.h  core.h  main.cpp
client/src/core/: Assets.cpp  BoxGeometry.cpp  BoxGeometry.h  BufferGeometry.cpp  BufferGeometry.h  Camera.cpp  Input.cpp  Logger.cpp  Logger.h  Material.cpp  Material.h  Window.cpp  Window.h
client/src/core/textures/: Image.cpp  TextureAtlas.cpp  TextureAtlas.h  TextureRect.h
client/src/core/webgl/: GLAttribute.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLTypes.h  GLUniform.cpp  GLUniform.h  IntResource.h
client/src/importer/: MinecraftImporter.cpp  MinecraftImporter.h
client/src/utils/: env.cpp  executable.cpp  math.cpp  math.h  memory.cpp  memory.h
client/src/world/: Block.cpp  Block.h  BlockMap.cpp  BlockMap.h  Chunk.cpp  Chunk.h  World.cpp  World.h
docs/: features.md  minecraft.md
profiles/: mac
website/: index.js
